# PythonWebScrapingManager

./: .gitignore  ImdbOperations.py  MovieDeatailsRetival.py  WebScraper.py  __init__.py  pyproject.toml  requirements.txt  setup.py  test.html
Models/: __init__.py
PythonWebScrapingManager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PythonWebScrapingManager/Tests/UnitTests/: test_DziennikUstawOperation.py  test_FilmwebOperation.py  test_ImdbOperations.py  test_WebScraper.py  test_WebtoonOperation.py
PythonWebScrapingManager/WebsitesModules/: __init__.py
PythonWebScrapingManager/WebsitesModules/Dziennikustawgov/: Dziennikustawgov.py  (+2 more)
PythonWebScrapingManager_filomilo/: .gitignore  MovieDeatailsRetival.py  WebScraper.py
PythonWebScrapingManager_filomilo/Tools/: StringOperations.py
PythonWebScrapingManager_filomilo/WebscraperModels/: LanguageCodes.py
Tests/UnitTests/: test_DziennikUstawOperation.py  test_FilmwebOperation.py  test_ImdbOperations.py  test_WebScraper.py  test_WebtoonOperation.py
WebsitesModules/: __init__.py
WebsitesModules/Dziennikustawgov/: Dziennikustawgov.py  DziennikustawgovDataExtraction.py
WebsitesModules/Filmweb/: Filmweb.py  FilmwebDataTypes.py  FilmwebMediaDataExtraction.py
WebsitesModules/Imdb/: Imdb.py  ImdbMediaDataExtraction.py  __init__.py
WebsitesModules/Webtoon/: Webtoon.py  WebtoonDataTypes.py  WebtoonsDataExtraction.py  __init__.py
tests/UnitTests/: test_DziennikUstawOperation.py  test_FilmwebOperation.py  test_ImdbOperations.py  test_WebScraper.py  test_WebtoonOperation.py
(+15 files in other folders)
