[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PythonWebScrapingManager_filomilo"
version = "0.0.1"
authors = [
  { name="Filip Borowiec", email="filomilo00@gmail.com" },
]
description = "My own package to help me with webscraping"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Filomilo/PythonWebScrapingManager"